# realtime-xenomai

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/camera/: stereo_capture.cpp  stereo_capture.hpp
src/detection/: yolo_detector.hpp
src/scheduler/: rt_scheduler.hpp
tests/: CMakeLists.txt  camera_tests.cpp  detector_tests.cpp  performance_tests.cpp  scheduler_tests.cpp
